[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"

# Set optimisations for dependencies to get better performance with reduced build times

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
